--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="index.page.css" />
 </head>
 
-<body onload="getGeoUser()">
+<body onload="checkCookie()">
 
 <div><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div>
 <hr />
