--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </table>
 </div>
 <hr />
-  <div><label>Speak My Location Every <i>X</i> Seconds</label><br /><input type="number" name="addressTimeout" id="edAddressTimeout" /></div>
-  <div><label>Speak Intersection Within <i>X</i> Feet:</label> <input type="number" name="intersectionApproach" id="edIntersectionApproach" /></div>
-<div><label>Look for New Intersection Every <i>X</i> Seconds:</label> <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /></div>
+  <div><label>Speak My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><br /></div>
+  <div><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet:</label></div>
+<div><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds:</label></div>
 <div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
 
 <br />
