--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>Darcy Map Help</title>
+<title>Street Navigation</title>
 
 <link rel="stylesheet" type="text/css" href="index.page.css" />
 </head>
@@ -31,9 +31,9 @@
 </table>
 </div>
 <hr />
-  <div><label>Speak My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><br /></div>
-  <div><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet:</label></div>
-<div><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds:</label></div>
+  <div><label>Speak My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><hr /></div>
+  <div><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet</label><hr /></div>
+<div><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
 <div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
 
 <br />
