--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="checkCookie()">
 
 <div><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div>
-<hr />
+<br />
 <div><input type="button" name="location" value="My Location" id="btnCurrentLocation" /></div>
 <hr />
 <div>
@@ -38,7 +38,7 @@
 
 <br />
 <div id="min">Debug Information:<br /><textarea id="edDebug" rows="4"></textarea></div>
-<div id="min">Error Information:<br /><textarea id="edError" rows="4"></textarea></div>
+<div id="min2">Error Information:<br /><textarea id="edError" rows="4"></textarea></div>
 
 <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="geofunctions.js"></script>
