--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 </table>
 </div>
 <hr />
-  <div><label>Speak My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><hr /></div>
-  <div><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet</label><hr /></div>
-<div><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
+  <div id="min"><label>Speak My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><hr /></div>
+  <div id="min"><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet</label><hr /></div>
+<div id="min"><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
 <div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
 
 <br />
-<div id="min">Debug Information:<br /><textarea id="edDebug" rows="4"></textarea></div>
-<div id="min2">Error Information:<br /><textarea id="edError" rows="4"></textarea></div>
+  <div id="min"><p>Debug Information:</p><br /><textarea id="edDebug" rows="4"></textarea></div>
+  <div id="min"><p>Error Information:</p><br /><textarea id="edError" rows="4"></textarea></div>
 
 <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="geofunctions.js"></script>
