--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
 
 <br />
-  <div id="min"><p>Debug Information:</p><br /><textarea id="edDebug" rows="4"></textarea></div>
-  <div id="min"><p>Error Information:</p><br /><textarea id="edError" rows="4"></textarea></div>
+  <div id="min"><p>Debug Information:</p><textarea id="edDebug" rows="4"></textarea></div>
+  <div id="min"><p>Error Information:</p><textarea id="edError" rows="4"></textarea></div>
 
 <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="geofunctions.js"></script>
