--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </table>
 </div>
 <hr />
-  <div id="min"><label>Speak My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><hr /></div>
+  <div id="min"><label>Update My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><hr /></div>
   <div id="min"><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet</label><hr /></div>
 <div id="min"><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
 <div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
