--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="checkCookie()">
 
 <div><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div>
-<br >
+<hr style="height:15pt; visibility:hidden;" />
 <div><input type="button" name="location" value="My Location" id="btnCurrentLocation" /></div>
 <hr />
 <div>
