--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <body onload="checkCookie()">
 
-<div><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div>
-<div><input type="button" name="location" value="My Location" id="btnCurrentLocation" /></div>
+<div id="most">  
+  <div><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div>
+  <div><input type="button" name="location" value="My Location" id="btnCurrentLocation" /></div>
+</div>
+  
 <hr />
 <div>
 <table>
