--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
 <body onload="checkCookie()">
 
-<div id="most">  
-  <div><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div>
-  <div><input type="button" name="location" value="My Location" id="btnCurrentLocation" /></div>
-</div>
+<div id="most"><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div> 
+<div id="most"><input type="button" name="location" value="My Location" id="btnCurrentLocation" /></div>
   
 <hr />
 <div>
