--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body onload="checkCookie()">
 
-<div id="most"><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div> 
-<div id="most"><input type="button" name="location" value="My Location" id="btnCurrentLocation" /></div>
+<div><input type="button" name="follow" value="Start" id="btnFollowStreets" /></div> 
+<div><input type="button" name="location" value="My Location" id="btnCurrentLocation" /></div>
   
 <hr />
 <div>
@@ -34,7 +34,7 @@
   <div id="min"><label>Update My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><hr /></div>
   <div id="min"><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet</label><hr /></div>
 <div id="min"><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
-<div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
+<div id="most"><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
 
 <br />
   <div id="min"><p>Debug Information:</p><textarea id="edDebug" rows="4"></textarea></div>
