--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>Street Navigation</title>
 
+<title>Street Navigation</title>
+  
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="index.page.css" />
 </head>
 
