--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <div>
 <table>
 <tr>
-  <td>Intersection:</td>
+  <td>Intersection</td>
   <td id="tdIntersection"></td>
 </tr>
 <tr>
-  <td>Address:</td>
+  <td>Addr.</td>
   <td id="tdAddress"></td>
 </tr>
 <tr>
