--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <div id="min"><label>Update My Location Every <input type="number" name="addressTimeout" id="edAddressTimeout" /> Seconds</label><hr /></div>
 <div id="min"><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet</label><hr /></div>
 <div id="min"><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
-<div><label>Check for Direction Over Past X Seconds:</label> <input type="number" name="directionTime" id="edDirectionTime" /></div>
-<div id="most"><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
+<div id="min"><label>Check for Direction Over Past <input type="number" name="directionTime" id="edDirectionTime" /> Seconds</label> </div>
+<div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
 
 <br />
   <div id="min"><p>Debug Information:</p><textarea id="edDebug" rows="4"></textarea></div>
