Updated table information
Added 'Address' and 'Direction'

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <td id="tdIntersection"></td>
 </tr>
 <tr>
-  <td>Addr.</td>
+  <td>Address</td>
   <td id="tdAddress"></td>
 </tr>
 <tr>
-  <td>Speed &amp; Direction:</td>
+  <td>Direction</td>
   <td id="tdSpeedDirection"></td>
 </tr>
 </table>
