--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
 
 <br />
-  <div id="min"><p>Debug Information:</p><textarea id="edDebug" rows="4"></textarea></div>
-  <div id="min"><p>Error Information:</p><textarea id="edError" rows="4"></textarea></div>
+  <div id="min" hidden><p>Debug Information:</p><textarea id="edDebug" rows="4"></textarea></div>
+  <div id="min" hidden><p>Error Information:</p><textarea id="edError" rows="4"></textarea></div>
 
 <video src="https://rawgit.com/bower-media-samples/big-buck-bunny-480p-30s/master/video.mp4" playsinline muted autoplay loop height=0></video>
   
