--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Street Navigation</title>  
+<title>Street Navigation for Visually Impaired</title>  
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 
