--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div id="min"><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
 <div id="min"><label>Check for Direction Over Past <input type="number" name="directionTime" id="edDirectionTime" /> Seconds</label><hr /> </div>
 <div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
-<div><label>Having trouble? Try resetting your GeoName username -> </label><input type="button" name="resetUsername" onclick="resetCookie()" /></div>
+<div><label>Having trouble? Try resetting your GeoName username. </label><input type="button" name="resetUsername" value="Go" onclick="resetCookie()" id="btnResetUsername"/></div>
 
 <br />
   <div id="min" hidden><p>Debug Information:</p><textarea id="edDebug" rows="4"></textarea></div>
