--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 <div id="min"><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
 <div id="min"><label>Check for Direction Over Past <input type="number" name="directionTime" id="edDirectionTime" /> Seconds</label><hr /> </div>
 <div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
-<div><label>Having trouble? Try resetting your GeoName username. </label><input type="button" name="resetUsername" value="Go" onclick="resetCookie()" id="btnResetUsername"/></div>
+<div id="min"><label>Having trouble? Try resetting your GeoName username. </label><input type="button" name="resetUsername" value="Go" onclick="resetCookie()" id="btnResetUsername"/></div>
 
 <br />
   <div id="min" hidden><p>Debug Information:</p><textarea id="edDebug" rows="4"></textarea></div>
   <div id="min" hidden><p>Error Information:</p><textarea id="edError" rows="4"></textarea></div>
 
-<video src="https://rawgit.com/bower-media-samples/big-buck-bunny-480p-30s/master/video.mp4" playsinline muted autoplay loop height=0></video>
+<video id="videoKeepAwake" src="android_awake.mp4" playsinline muted autoplay loop height=0></video>
   
 <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="geofunctions.js"></script>
