--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 <div id="min"><label>Speak Intersection Within <input type="number" name="intersectionApproach" id="edIntersectionApproach" /> Feet</label><hr /></div>
 <div id="min"><label>Look for New Intersection Every <input type="number" name="intersectionTimeout" id="edIntersectionTimeout" /> Seconds</label><hr /></div>
 <div id="min"><label>Check for Direction Over Past <input type="number" name="directionTime" id="edDirectionTime" /> Seconds</label><hr /> </div>
-<div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div>
-<div id="min"><label>Having trouble? Try resetting your GeoName username. </label><input type="button" name="resetUsername" value="Go" onclick="resetCookie()" id="btnResetUsername"/></div>
+<div><input type="button" name="applySettings" value="Apply Settings" id="btnApplySettings" /></div><hr />
+<div id="min"><label>Having trouble?<input type="button" name="resetUsername" value="Reset" onclick="resetCookie()" id="btnResetUsername"/> your username.</label></div>
 
-<br />
   <div id="min" hidden><p>Debug Information:</p><textarea id="edDebug" rows="4"></textarea></div>
   <div id="min" hidden><p>Error Information:</p><textarea id="edError" rows="4"></textarea></div>
 
