--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 
 <meta name="author" content="Made for TOM Makeathon at Northwestern University by Daniel Bednarczyk, Darcy Green (Need Knower), Joe Cummings, Julie Davies, Megan Reid, Wong Song Wei" />
-<meta name="description" content="Designed to assist people with visual impairment navigate city streets easier." />
+<meta name="description" content="Helps visually impaired users to navigate city streets. Announces intersections while walking." />
 
 <link rel="stylesheet" type="text/css" href="index.page.css" />
   
