--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="author" content="Made for TOM Makeathon at Northwestern University by Daniel Bednarczyk, Darcy Green (Need Knower), Joe Cummings, Julie Davies, Megan Reid, Wong Song Wei" />
 <meta name="description" content="Helps visually impaired users to navigate city streets. Announces intersections while walking." />
 
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="index.page.css" />
   
 </head>
